--- a/index.html
+++ b/index.html
@@ -104,6 +104,8 @@
 
   <div id="what" class="containter">
     <h1> How We Did It</h1>
+     <div class="row">
+      <div class="d-flex align-items-center col-md-6">
     <p> Hello, our names are Maxwell Ye, Isaac Yebio, and Tyson Fang, and this is our MoCoHacks 2021 project. Our project’s name is “Straighten Up,” it is a website designed to help the user maintain good posture while sitting at their computer. We are submitting it into the Best UI Hack project track.
 </p>
     <p>
