--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   </div>
 
   <div id="why" class="container">
-    <h1>Reaching New Heights</h1>
+    <h1 style="text-align:center">Reaching New Heights</h1>
     <p>The term posture is in reference to the position of one’s body in a standing or sitting position. The spine
       consists of three natural curvatures which when aligned evenly distributes the weight between your feet. Good
       posture distributes this weight to prevent lopsidedness.</p>
