--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
   </div>
 
 
-  <div id="what" class="containter">
+  <div id="what" class="container">
     <h1> How We Did It</h1>
     <p> Hello, our names are Maxwell Ye, Isaac Yebio, and Tyson Fang, and this is our MoCoHacks 2021 project. Our project’s name is “Straighten Up,” it is a website designed to help the user maintain good posture while sitting at their computer. We are submitting it into the Best UI Hack project track.
 </p>
